tests/NormalTests/paczka1/small_fuzzy/98418290.err
Error in line 1: bSV A475 35,9
Error in line 6: 93f9b9Zj S24 43,9
Error in line 13: ifpiz A530 47,2
